[gd_scene load_steps=18 format=4 uid="uid://by2w026v1l3q"]

[ext_resource type="Script" path="res://scripts/notepad.gd" id="3_xj0ly"]
[ext_resource type="PackedScene" uid="uid://cd8vbm5in07ms" path="res://scenes/player.tscn" id="4_1r07b"]
[ext_resource type="Texture2D" uid="uid://d4l76sk03ut4f" path="res://art/notepad_ui.png" id="4_msgmk"]
[ext_resource type="PackedScene" uid="uid://iww63bcg0wbq" path="res://scenes/customer.tscn" id="4_sjedv"]
[ext_resource type="PackedScene" uid="uid://cm34nodey2fao" path="res://scenes/table.tscn" id="5_w6ube"]
[ext_resource type="PackedScene" uid="uid://h3d6xe6de10o" path="res://scenes/fire_extinguisher.tscn" id="6_sp336"]
[ext_resource type="PackedScene" uid="uid://b7kkslyq85aaa" path="res://scenes/fire.tscn" id="7_oeso0"]
[ext_resource type="Texture2D" uid="uid://qou5u14rdm55" path="res://art/tilemap.png" id="8_d20en"]
[ext_resource type="Texture2D" uid="uid://cyh0spxmuvhty" path="res://art/downcast_light.png" id="9_dagfr"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_3spg2"]
vertices = PackedVector2Array(616.961, 345.531, -2.90625, 347.961, -0.0703125, -0.382813, 654.883, -26.0469)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(666, -36.5, -10, -10, -13, 358, 626, 355.5)])

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q065k"]
texture = ExtResource("4_msgmk")

[sub_resource type="Animation" id="Animation_y7psn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(826, 525)]
}

[sub_resource type="Animation" id="Animation_pjkop"]
resource_name = "down"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1.56),
"update": 0,
"values": [Vector2(826, 398), Vector2(826, 525)]
}

[sub_resource type="Animation" id="Animation_c1abs"]
resource_name = "pop up"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1.56, -1.56),
"update": 0,
"values": [Vector2(826, 525), Vector2(826, 398)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yfagk"]
_data = {
"RESET": SubResource("Animation_y7psn"),
"down": SubResource("Animation_pjkop"),
"pop up": SubResource("Animation_c1abs")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_poxdk"]
texture = ExtResource("8_d20en")
texture_region_size = Vector2i(32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(2, -16, 16, -16, 16, 16, 2, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/y_sort_origin = 35
3:0/0 = 0
3:0/0/y_sort_origin = 35
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -2, -16, -2, 16, -16, 16)
0:2/0 = 0
0:2/0/y_sort_origin = 35
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/y_sort_origin = 35
2:2/0 = 0
2:2/0/y_sort_origin = 35
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_ktun4"]
tile_size = Vector2i(32, 32)
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_poxdk")

[node name="Main" type="Node2D"]
y_sort_enabled = true
scale = Vector2(2, 2)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_3spg2")
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Notepad" type="PanelContainer" parent="CanvasLayer/Control"]
texture_filter = 1
layout_mode = 0
offset_left = 826.0
offset_top = 525.0
offset_right = 1076.0
offset_bottom = 775.0
theme_override_styles/panel = SubResource("StyleBoxTexture_q065k")
script = ExtResource("3_xj0ly")

[node name="Order 1" type="Node2D" parent="CanvasLayer/Control/Notepad"]
position = Vector2(87, 77)
rotation = 0.0261799
skew = 0.200713

[node name="Label" type="Label" parent="CanvasLayer/Control/Notepad/Order 1"]
texture_filter = 1
offset_right = 300.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
"

[node name="Order 2" type="Node2D" parent="CanvasLayer/Control/Notepad"]
position = Vector2(79.0001, 113)
rotation = 0.0261799
skew = 0.200713

[node name="Label" type="Label" parent="CanvasLayer/Control/Notepad/Order 2"]
texture_filter = 1
offset_right = 300.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Order 3" type="Node2D" parent="CanvasLayer/Control/Notepad"]
position = Vector2(71, 158)
rotation = 0.0261799
skew = 0.200713

[node name="Label" type="Label" parent="CanvasLayer/Control/Notepad/Order 3"]
texture_filter = 1
offset_right = 300.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Order 4" type="Node2D" parent="CanvasLayer/Control/Notepad"]
position = Vector2(65, 208)
rotation = 0.0261799
skew = 0.200713

[node name="Label" type="Label" parent="CanvasLayer/Control/Notepad/Order 4"]
texture_filter = 1
offset_right = 300.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/Notepad"]
libraries = {
"": SubResource("AnimationLibrary_yfagk")
}

[node name="Timer" type="Timer" parent="CanvasLayer/Control/Notepad"]
wait_time = 2.0
one_shot = true

[node name="Player" parent="." instance=ExtResource("4_1r07b")]
position = Vector2(49.5, 103)

[node name="Customer" parent="." instance=ExtResource("4_sjedv")]
position = Vector2(239, 136)

[node name="Customer2" parent="." instance=ExtResource("4_sjedv")]
position = Vector2(294, 234)

[node name="Customer3" parent="." instance=ExtResource("4_sjedv")]
position = Vector2(86, 297)

[node name="Customer4" parent="." instance=ExtResource("4_sjedv")]
position = Vector2(506, 172)

[node name="Table" parent="." instance=ExtResource("5_w6ube")]
position = Vector2(318, 166)

[node name="Table2" parent="." instance=ExtResource("5_w6ube")]
position = Vector2(182, 230)

[node name="Table3" parent="." instance=ExtResource("5_w6ube")]
position = Vector2(376, 249)

[node name="Table4" parent="." instance=ExtResource("5_w6ube")]
position = Vector2(440.5, 182)

[node name="Customer5" parent="." instance=ExtResource("4_sjedv")]
position = Vector2(395.5, 99.5)

[node name="Customer8" parent="." instance=ExtResource("4_sjedv")]
position = Vector2(491.5, 122)

[node name="Customer6" parent="." instance=ExtResource("4_sjedv")]
position = Vector2(491.5, 239.5)

[node name="Customer7" parent="." instance=ExtResource("4_sjedv")]
position = Vector2(286, 296)

[node name="Fire Extinguisher" parent="." instance=ExtResource("6_sp336")]
position = Vector2(77.5, 184.5)

[node name="Fire" parent="." instance=ExtResource("7_oeso0")]
position = Vector2(540.5, 129)

[node name="Fire2" parent="." instance=ExtResource("7_oeso0")]
position = Vector2(237.5, 178.5)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AAAFAAIAAAAAAAEAAAAHAAIAAAABAAEAAAAIAAIAAAAEAAEAAAAJAAIAAAAEAAEAAAAKAAIAAAAEAAEAAAALAAIAAAAEAAEAAAAMAAIAAAADAAEAAAAOAAIAAAABAAMAAAAHAAEAAAABAAAAAAAMAAEAAAADAAAAAAAGAAIAAAACAAEAAAANAAIAAAABAAEAAAANAAEAAAAAAAIAAAAOAAEAAAABAAIAAAAPAAEAAAABAAIAAAAQAAEAAAACAAIAAAAQAAIAAAACAAMAAAAPAAIAAAABAAMAAAA=")
tile_set = SubResource("TileSet_ktun4")
metadata/_edit_lock_ = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.592203, 0.720257, 0.878053, 1)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(304.5, 40)
scale = Vector2(1, 2.40625)
shadow_enabled = true
texture = ExtResource("9_dagfr")

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(272.5, 40)
scale = Vector2(1, 2.40625)
shadow_enabled = true
texture = ExtResource("9_dagfr")

[node name="PointLight2D3" type="PointLight2D" parent="."]
position = Vector2(336, 40)
scale = Vector2(1, 2.40625)
shadow_enabled = true
texture = ExtResource("9_dagfr")

[node name="PointLight2D4" type="PointLight2D" parent="."]
position = Vector2(366.5, 40)
scale = Vector2(1, 2.40625)
shadow_enabled = true
texture = ExtResource("9_dagfr")

[connection signal="mouse_entered" from="CanvasLayer/Control/Notepad" to="CanvasLayer/Control/Notepad" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/Notepad" to="CanvasLayer/Control/Notepad" method="_on_mouse_exited"]
[connection signal="timeout" from="CanvasLayer/Control/Notepad/Timer" to="CanvasLayer/Control/Notepad" method="_on_timer_timeout"]
